# kodex

./: .gitignore  AGENTS.md  MODULE.bazel  README.md  cliff.toml  defs.bzl  justfile
.github/ISSUE_TEMPLATE/: 3-cli.yml
.github/actions/linux-code-sign/: action.yml
.github/scripts/: install-musl-build-tools.sh  kodex_release_version.py  test_cli_manifest.py  test_install_sh.py  test_kodex_release_version.py  test_release_workflow.py
.github/workflows/: ci.yml  release.yml  rust-release-windows.yml  rust-release.yml  sdk.yml
codex-cli/: package.json
codex-cli/scripts/: README.md  build_npm_package.py  install_native_deps.py  run_in_container.sh
codex-rs/: Cargo.toml  README.md
codex-rs/app-server/: README.md
codex-rs/app-server-daemon/: README.md
codex-rs/app-server-test-client/: README.md
codex-rs/backend-client/: BUILD.bazel
codex-rs/chatgpt/: Cargo.toml
codex-rs/chatgpt/src/: chatgpt_client.rs  lib.rs
codex-rs/cli/: BUILD.bazel  Cargo.toml
codex-rs/core/: BUILD.bazel  config.schema.json
codex-rs/debug-client/: README.md
codex-rs/exec-server/: README.md
codex-rs/responses-api-proxy/: README.md
codex-rs/rmcp-client/: BUILD.bazel
codex-rs/tui/: BUILD.bazel  Cargo.toml  tooltips.txt
docs/: install.md
docs/fork-tracking/: README.md  merge-audit.md  registry.md
patches/: BUILD.bazel
scripts/: debug-codex.sh  mock_responses_websocket_server.py  run_tui_with_exec_server.sh  stage_npm_packages.py  start-codex-exec.sh  test-remote-env.sh
scripts/install/: install.ps1  install.sh
sdk/typescript/: README.md
(+152 files in other folders)
